tests/baselines/reference/invalidUnicodeEscapeSequance3.errors.txt
==== tests/cases/compiler/invalidUnicodeEscapeSequance3.ts (4 errors) ====
    a\u
     ~
!!! error TS1001: Unexpected character "\".
     ~
!!! error TS1005: ';' expected.
    ~
!!! error TS2095: Could not find symbol 'a'.
      ~
!!! error TS2095: Could not find symbol 'u'.